--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,7 @@
     }
   </style>
 
-  <!--  bootstrap 5 cdn links start  -->
-
-
-
-  <!--  bootstrap 5 cdn links end  -->
+<script src="https://cdn-in.pagesense.io/js/decacornretailprivatelimited/537b290ffff84b85a7032c6f60e3ea2b.js"></script>
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
