added spin wheel module in popup

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,15 @@
       width: auto !important;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11105694379"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11105694379');
+</script>
 
 <script src="https://cdn-in.pagesense.io/js/decacornretailprivatelimited/537b290ffff84b85a7032c6f60e3ea2b.js"></script>
 
@@ -77,6 +86,14 @@
   <!-- font awsome cdn link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- ngx wheel scripts -->
+  <script src="https://rawcdn.githack.com/zarocknz/javascript-winwheel/229a47acc3d7fd941d72a3ba9e1649751fd10ed5/Winwheel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+
+  <script src="src/wheel.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+
 </head>
 
 <body>
@@ -91,6 +108,7 @@
     </div>
   </div>
   <molla-root></molla-root>
+
 
 </body>
 
