--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,14 @@
     gtag('event', 'conversion', { 'send_to': 'AW-11002071027/k6yoCKbCv_IYEPOPmf4o' });
   </script>
 
+  <!-- new font links are here -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
+
+    <!-- new font links are here -->
+
 </head>
 
 <body>
